post planning fonctionne
